--- a/ListaSpesaWish/ListaSpesaWish.csproj
+++ b/ListaSpesaWish/ListaSpesaWish.csproj
@@ -1081,6 +1081,7 @@
     <Content Include="Site\css\loading-bar.css" />
     <Content Include="Site\css\site.css" />
     <Content Include="Site\js\app.js" />
+    <Content Include="Site\js\directive-listaSpesa.js" />
     <Content Include="Site\js\factory.js" />
     <Content Include="Site\js\roundProgress.min.js" />
     <Content Include="Site\js\services.js" />
@@ -1088,6 +1089,7 @@
     <Content Include="Site\js\userController.js" />
     <Content Include="Site\templates\form-login.html" />
     <Content Include="Site\templates\home.html" />
+    <Content Include="Site\templates\lista-spesa.html" />
     <Content Include="Site\templates\navbar-footer.html" />
     <Content Include="Site\templates\navbar-top.html" />
     <Content Include="Web.config" />
@@ -1103,6 +1105,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\LoginDto.cs" />
+    <Compile Include="Models\UtenteDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
