--- a/ListaSpesaWish.EF/packages.config
+++ b/ListaSpesaWish.EF/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
-  <package id="EntityFramework.SqlServerCompact" version="6.1.3" targetFramework="net46" />
-  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net46" />
+  <package id="NLog" version="4.2.0" targetFramework="net46" />
+  <package id="NLog.Config" version="4.2.0" targetFramework="net46" />
+  <package id="NLog.Schema" version="4.0.0" targetFramework="net46" />
 </packages>
