--- a/ListaSpesaWish/Web.config
+++ b/ListaSpesaWish/Web.config
@@ -5,11 +5,12 @@
   -->
 <configuration>
   <configSections>
-        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    </configSections>
-  <appSettings></appSettings>  
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->  
+  </configSections>
   <connectionStrings>
-    <add name="ListaSpesaContext" connectionString="Data Source=DatabaseSqlCompact.mdf;Integrated Security=True" providerName="System.Data.SqlClient"  />
+    <add name="ListaSpesaContext" connectionString="Data Source=PC-TOSATO\SQLEXPRESS;Initial Catalog=Prova;Integrated Security=false;User Id=sa;Password=nomos;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
