--- a/ListaSpesaWish/Web.config
+++ b/ListaSpesaWish/Web.config
@@ -12,6 +12,15 @@
   <connectionStrings>
     <add name="ListaSpesaContext" connectionString="Data Source=PC-TOSATO\SQLEXPRESS;Initial Catalog=Prova;Integrated Security=false;User Id=sa;Password=nomos;" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <appSettings>
+    <!--Mail send-->
+    <add key="emailFrom" value="wish.days.test@gmail.com" />
+    <add key="emailPassword" value="test1234test" />
+    <add key="smtpClient" value="smtp.gmail.com" />
+    <add key="smtpPort" value="587" />
+    <add key="smtpEnableSSL" value="true"/>
+    <!--Mail send-->    
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
