--- a/ListaSpesaWish/ListaSpesaWish.csproj
+++ b/ListaSpesaWish/ListaSpesaWish.csproj
@@ -1108,6 +1108,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ClearListaDto.cs" />
     <Compile Include="Models\VoceDto.cs" />
     <Compile Include="Models\EmailDto.cs" />
     <Compile Include="Models\ListaSpesaDto.cs" />
